--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: javascript test
         run: npm run test
 
+      - name: go mod init
+        run: go mod init app
+
       - name: go vet
         working-directory: app
         run: go vet
