--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,9 @@ jobs:
       - name: javascript test
         run: npm run test
 
+      - name: go mod init
+        run: go mod init app
+
       - name: go vet
         working-directory: app
         run: go vet
